$NetBSD: CHANGES-2009,v 1.4489 2009/12/02 12:09:08 wiz Exp $

Changes to the packages collection and infrastructure in 2009:

	Updated databases/py-postgresql to 4.0 [darcy 2009-01-01]
	Updated security/amavisd-new to 2.6.2 [obache 2009-01-01]
	Updated devel/cpuflags to 1.31 [abs 2009-01-02]
	Updated databases/rrdtool to 1.3.5 [martti 2009-01-02]
	Updated databases/rrdtool12 to 1.2.29 [martti 2009-01-02]
	Updated textproc/p5-Text-WrapI18N to 0.06nb2 [he 2009-01-02]
	Updated devel/p5-Rose-Object to 0.85.4 [he 2009-01-02]
	mk/bsd.pkg.mk: freeze ended for pkgsrc-2008Q4 branch [agc 2009-01-03]
	Updated archivers/pbzip2 to 1.0.4 [wiz 2009-01-03]
	Added emulators/gambatte version 0.4.0 [wiz 2009-01-03]
	Added emulators/nestopia version 1.40h [wiz 2009-01-03]
	Added emulators/snes9x-gtk version 1.51.61 [wiz 2009-01-03]
	Updated graphics/pngcrush to 1.6.12 [adam 2009-01-03]
	Updated fonts/fontforge to 20081224 [adam 2009-01-03]
	Updated emulators/wine to 1.1.12 [adam 2009-01-03]
	Added print/kpathsea version 3.5.7 [minskim 2009-01-03]
	Updated net/aria2 to 0.16.2nb1 [dholland 2009-01-03]
	Updated net/bind95 to 9.5.1 [adrianp 2009-01-04]
	Updated net/bind9 to 9.4.3 [adrianp 2009-01-04]
	Added net/bind96 version 9.6.0 [adrianp 2009-01-04]
	Removed net/bind8 [adrianp 2009-01-04]
	Added textproc/p5-Data-HexDump version 0.02 [adrianp 2009-01-04]
	Added net/p5-RadiusPerl version 0.13 [adrianp 2009-01-04]
	Updated devel/bugzilla3 to 3.2 [adrianp 2009-01-04]
	Added pkgtools/pkg_distinst version 0.01 [adrianp 2009-01-04]
	Added chat/inspircd12 version 1.2.0b4 [adrianp 2009-01-04]
	Updated net/isc-dhcp4 to 4.1.0 [adrianp 2009-01-04]
	Updated net/isc-dhcpd4 to 4.1.0 [adrianp 2009-01-04]
	Updated net/isc-dhcrelay4 to 4.1.0 [adrianp 2009-01-04]
	Updated net/isc-dhclient4 to 4.1.0 [adrianp 2009-01-04]
	Added chat/ctrlproxy version 3.0.8 [adrianp 2009-01-04]
	Updated graphics/gimp-ufraw to 0.15 [gdt 2009-01-04]
	Added security/openvas-libraries version 2.0.0 [adrianp 2009-01-04]